--- a/jquery_problems/grid.html
+++ b/jquery_problems/grid.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>JQuery1</title>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script  src="jquery.js"></script>
 </head>
 <body>
